<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">Nama Aplikasi</string>
    <string name="app_copyright">Copyright</string>
    <string name="app_icon_desc">Icon</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="button_1">Image</string>
    <string name="button_2">Location</string>
    <string name="button_3">Map</string>
    <string name="button_4">List of Provinces</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="image_button_1">Pick Gallery</string>
    <string name="image_button_2">Take Picture</string>
    <string name="image_view_desc">View</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="gps_button_1">Get Location</string>
    <string name="gps_label_lat">Latitude: </string>
    <string name="gps_label_long">Longitude: </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_list_view_map">ListViewMapActivity</string>
    <string name="list_title">List of Provinces</string>
    <string name="button_5">Twitter</string>
    <string name="title_activity_twitter_client">TwitterClientActivity</string>
    <string name="button_6">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_button_1">Login</string>
    <string name="login_button_2">Reset</string>
    <string name="button_7">Notification</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notif_button_1">Show Notif</string>
    <string name="notif_hint_1">Ticker</string>
    <string name="notif_hint_2">Title</string>
    <string name="notif_hint_3">Message</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="button_8">GridView</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="button_9">WebView</string>

</resources>