<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="right"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/notif_edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/notif_hint_1" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/notif_edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/notif_hint_2" />

    <EditText
        android:id="@+id/notif_edit_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:hint="@string/notif_hint_3" />

    <Button
        android:id="@+id/notifButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notif_button_1" />

</LinearLayout>